updated testing sbt plugins